# G-turismo

./: .gitignore  README.md  confing.py  g_turismo.db-shm  g_turismo.db-wal  main.py  pyproject.toml
src/auth/: README.md  create_account.py  exceptions.py  route.py  schemas.py  utils.py
src/database/: init_database.py
src/global_schemas/: schemas_token.py
src/included/: README.md  included_routers.py
src/models/: user.py
src/profile/: user_profile.py
src/routes/auth/: login.py  register.py
src/routes/profile/: user_profile.py
src/routes/services_g_turismo/: published_services.py
src/schemas/auth/: schemas_auth.py  schemas_login.py  schemas_register.py
src/service/auth_user/: auth_login.py  auth_register.py
src/service/jwt/: auth.py  depends.py  jwt_decode_token.py
src/service/send_email/: README.md  send_verification_code.py
src/services_g_turismo/: published_services.py
src/utils/: generate_profile_image.py  generator_code_for_email.py  hashed_email.py  logs.py
